Fixed right align

--- a/lifebank-fragments/src/lifebank-public/section-title/styles.css
+++ b/lifebank-fragments/src/lifebank-public/section-title/styles.css
@@ -33,7 +33,7 @@
   margin: 20px 0 25px;
 }
 
-.section-title.left .bar {
+.section-title.right .bar {
   margin: 15px 0px 20px auto;
 }
 
